--- a/banner.html
+++ b/banner.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
-
-
-<html> <head> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> </head> <body> <ins class="adsbygoogle" style="display:block" data-ad-client="ca-app-pub-3940256099942544" data-ad-slot="6300978111" data-ad-format="auto"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script> </body> </html>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+<body style="margin:0; padding:0; text-align:center;">
+  <!-- AdMob Test Banner -->
+  <ins class="adsbygoogle"
+       style="display:block; width:100%; height:90px;"
+       data-ad-client="ca-pub-3940256099942544"
+       data-ad-slot="6300978111"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</body>
+</html>
